--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                     <p> 
                         À l'âge de 10 ans, j'ai reçu mon premier ordinateur, et depuis lors, l'informatique et Internet sont devenus une partie spéciale de ma vie. En <b>janvier 2022</b>, j'ai décidé de me consacrer exclusivement à l'approfondissement de mes connaissances en informatique et en programmation, et d'effectuer ma reconversion professionnelle. <br><br> De <b>Chef de cuisine</b> à <b>Développeur</b>. Aujourd'hui, je travaille avec un maximum de plaisir et d'intérêt, voulant toujours en savoir plus, essayant d'améliorer le code déjà fait, mais aussi faire des innovations et essayer de nouvelles approches, je vois que c'était le meilleur choix professionnel que j'ai fait dans ma vie.<br><br>
                     </p>
-                    <a href="./assets/sfr-facture-0.pdf" target="_blank" rel="noopener noreferrer"><button class="btn-rounded btn btn-outline-primary mt-4">Download CV</button></a>
+                    <a href="./assets/cv-DanielAlbano.pdf"  download><button class="btn-rounded btn btn-outline-primary mt-4">télécharger Curriculum Vitae</button></a>
                 </div>              
             </div><!-- end of about wrapper -->
         </div><!-- end of container -->
@@ -158,7 +158,7 @@
                     <p class="col-12"><b>Brésil(2011-2013)</b> - Guide touristique et entrepreneur secteur du tourisme - RN</p>
                     <p class="col-12"><b>Brésil(2009-2011)</b> - 2 ans d'électrotechnique - Universidade Federal do Rio Grande Do Norte(UFRN)</p>
                   </p>
-                  <a target="_blank" rel="noopener noreferrer" href="" class="btn btn-primary my-3">télécharger Curriculum Vitae</a>
+                  <a href="./assets/cv-DanielAlbano.pdf" class="btn btn-primary my-3" download>télécharger Curriculum Vitae</a>
                 </div>
               </div>
             </div>
