--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
                 <li class="item">
                     <a class="link" href="#curriculum">Curriculum</a>
                 </li>
-                <li class="item">
+                <!-- <li class="item">
                     <a class="link" href="#portfolio">Portfolio</a>
-                </li>
+                </li> -->
             </ul>
             <a href="javascript:void(0)" id="nav-toggle" class="hamburger hamburger--elastic">
                 <div class="hamburger-box">
@@ -165,12 +165,10 @@
         </div>
     </section><!-- end of service section -->
 
-
     <!-- Contact me section -->
     <section class="section" id="contact">
         <div class="container text-center">
-            <p class="section-subtitle">if you liked...</p>
-            <h6 class="section-title mb-6">Contact me</h6>
+            <h6 class="section-title mb-6">Contactez moi</h6>
             <!-- row -->
             <div class="row justify-content-center">
 <ul class="list-group list-group-horizontal">
