--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
           <div class="card-body">
             <img class="img-responsive mb-5" width="30px" height="50px"
               src="https://www.udemy.com/staticx/udemy/images/v7/logo-udemy.svg" />
-            <h5 class="card-title">Udemy - Next JS Course(25h)</h5>
+            <h5 class="card-title">Formation Next JS - Udemy(25h)</h5>
             <p class="card-text">Learn NextJS from the ground up and build production-ready, fullstack ReactJS apps with
               the NextJS framework!</p>
             <a target="_blank" rel="noopener noreferrer"
@@ -136,7 +136,7 @@
           <div class="card-body">
             <img class="img-responsive mb-5" width="30px" height="50px"
               src="https://www.udemy.com/staticx/udemy/images/v7/logo-udemy.svg" />
-            <h5 class="card-title">Formation React with Redux - Udemy (35h)</h5>
+            <h5 class="card-title">Formation React JS with Redux - Udemy (35h)</h5>
             <p class="card-text">Master React and Redux Toolkit. Includes RTK Query, tons of custom hooks, and more!
               Course 100% Updated November 2022</p>
             <a target="_blank" rel="noopener noreferrer" href="https://www.udemy.com/course/react-redux/"
